--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
     "gatsby": "^3.0.1",
@@ -20,6 +21,7 @@
     "gatsby-plugin-theme-ui": "^0.3.5",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
+    "gh-pages": "^3.1.0",
     "netlify-cms-app": "^2.14.26",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
